Kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.13
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
          startupProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            # exec:
            #   command:
            #     - cat
            #     - /tmp/healthy
            # initialDelaySeconds: 5
            # periodSeconds: 5
